--- a/mongodb/lab_config.yaml
+++ b/mongodb/lab_config.yaml
@@ -2,12 +2,16 @@
 storage:
   dbPath: "/var/mongodb/db/"
 systemLog:
-  path: "/data/log.mongod.log"
+  path: "/var/mongodb/db/mongod.log"
   destination: "file"
+  logAppend: true
 net:
   bindIp : "127.0.0.1,192.168.103.100"
   port: 27000
 processManagement:
   fork : true
 security:
-    authorization: "enabled"
+  authorization: "enabled"
+operationProfiling:
+   mode: "slowOp"
+   slowOpThresholdMs: 50
